--- a/ProductionProject/app/src/main/res/values/strings.xml
+++ b/ProductionProject/app/src/main/res/values/strings.xml
@@ -5,4 +5,6 @@
     <string name="click_here_to_register">Click here to Register</string>
     <string name="click_here_to_login">Click here to login</string>
     <string name="logout">Logout</string>
+    <string name="email">Email</string>
+    <string name="password">Password</string>
 </resources>
